--- a/remanga_fastapi/templates/search.html
+++ b/remanga_fastapi/templates/search.html
@@ -1,13 +1,12 @@
 {% extends "catalog.html" %}
-{% load static %}
 
 {% block title %}
   <title>Поиск</title>
 {% endblock %}
 
 {% block css %}
-  <link rel="preload" href="{% static 'search/ab24ef225a3ac5d5.css' %}" as="style" />
-  <link rel="stylesheet" href="{% static 'search/ab24ef225a3ac5d5.css' %}" data-n-p="" />
+  <link rel="preload" href="{{ url_for('static', path='search/ab24ef225a3ac5d5.css') }}" as="style" /> 
+  <link rel="stylesheet" href="{{ url_for('static', path='search/ab24ef225a3ac5d5.css') }}" data-n-p="" />
 {% endblock %}
 
 {% block styles %}
@@ -222,7 +221,6 @@
       font-family: "__Exo_2_cfc288", "__Exo_2_Fallback_cfc288";
     }
   </style>
-  <link rel="stylesheet" type="text/css" href="{% static 'search/a87e1eafaffb2fdc.css' %}" />
   <style type="text/css" data-styled-jsx="">
     .root.jsx-f8919b3175e5971e {
       position: absolute;
@@ -372,57 +370,78 @@
     </div>
   </main>
 </div>
+<script src="{{ url_for('static', path='catalog/js/endless_scroll.js') }}"></script>
+<script src="{{ url_for('static', path='search/search_endless_scroll.js') }}"></script>
 <script>
-  const json_data = "{{ json_data | escapejs }}";
-  const data = JSON.parse(json_data);
-  var grid = document.querySelector(".grid");
+  const grid = document.querySelector(".grid");
   const input = document.querySelector(".Input_input__F9Zao");
+  const titles = json_data_parse("{{ titles }}");
+  const empty_grid_html = grid.innerHTML;
+  const page_size = 30;
+  let pages_count = Math.floor(titles.length / page_size);
+  let filtered_titles = titles;
 
-  let filteredArr = [];
-  grid_html = grid.innerHTML;
-  input.addEventListener("keyup", (e) => {
-    grid.innerHTML = grid_html;
-    filteredArr = data.filter((info) =>
-      info["rus_name"].toLowerCase().includes(e.target.value.toLowerCase())
+  const search_endless_scroll = new Search_endless_scroll();
+
+  search_endless_scroll.add_titles_page(filtered_titles)
+
+  input.addEventListener("keyup", (event) => {
+    grid.innerHTML = empty_grid_html;
+    filtered_titles = titles.filter((title) =>
+      title["rus_name"].toLowerCase().includes(event.target.value.toLowerCase())
     );
-    if (filteredArr.length > 0) {
-      filteredArr.map((info) => {
-        grid.insertAdjacentHTML(
-          "afterBegin",
-          `              
-              <div class="gridItem">
-                <a
-                  title="${info['rus_name']}"
-                  class="Vertical_card__Sxft_"
-                  href="/manga/${info['dir_name']}"
-                  ><div class="Vertical_wrapper__eThs_">
-                    <div
-                      class="Image_container__NpLCh Image_hover__XbAZP rounded-md Vertical_img__vaURH Image_imagePlaceholder__oa9r1"
-                    >
-                      <div
-                        class="Image_imgStatic__14_gQ Image_image__HOj0m Image_imgFluid__Men3E Image_lazyLoaded__VDjoe"
-                        style="
-                          background-image: url('/media/titles/${info["img_url"]}');
-                        "
-                      ></div>
-                    </div>
-                    <div class="Vertical_rating__nY5Rc">${info["avg_rating"].toFixed(1)}</div>
-                    <div class="Horizontal_title_info">
-                      <p class="Typography_caption__yY5RL">
-                        ${info["manga_type"]}
-                      </p>
-                      <h4 class="Typography_h6__crs2H Typography_lineClamp-2__4Ampt Typography_lineClamp__92oq_">
-                        ${info["rus_name"]}
-                      </h4>
-                    </div>
-                  </div>
-                </a>
-              </div>`
-        );
-      });
-    } else {
+
+    search_endless_scroll.page = 0;
+    pages_count = Math.floor(filtered_titles.length / page_size);
+    search_endless_scroll.gridPlaceholder = search_endless_scroll.grid.querySelector(".gridPlaceholder");
+
+    if (filtered_titles.length > 0)
+      search_endless_scroll.add_titles_page(filtered_titles)
+    else {
       grid.innerHTML = `<b>No results found...</b>`
+      search_endless_scroll.gridPlaceholder = search_endless_scroll.grid.querySelector(".gridPlaceholder");
     }
   });
+
+  function json_data_parse(titles) {
+    const parser = new DOMParser();
+    const unescaped_string = parser.parseFromString(`<!doctype html><body>${titles.replace(/&#34;/g, "")}`, 
+      'text/html').body.textContent;
+    const replacedString = unescaped_string.replace(/'/g, '"');
+    const json_data = JSON.parse(replacedString);
+    
+    return json_data;
+  }
+
+  function add_title(title) {
+    search_endless_scroll.gridPlaceholder.insertAdjacentHTML("beforebegin", `              
+      <div class="gridItem">
+        <a
+          title="${title['rus_name']}"
+          class="Vertical_card__Sxft_"
+          href="/manga/${title['dir_name']}">
+          <div class="Vertical_wrapper__eThs_">
+            <div
+              class="Image_container__NpLCh Image_hover__XbAZP rounded-md Vertical_img__vaURH Image_imagePlaceholder__oa9r1">
+              <div
+                class="Image_imgStatic__14_gQ Image_image__HOj0m Image_imgFluid__Men3E Image_lazyLoaded__VDjoe"
+                style="background-image: url('/media/titles/${title["img_url"]}');">
+              </div>
+            </div>
+            <div class="Vertical_rating__nY5Rc">${title["avg_rating"].toFixed(1)}</div>
+            <div class="Horizontal_title_info">
+              <p class="Typography_caption__yY5RL">
+                ${title["manga_type"]}
+              </p>
+              <h4 class="Typography_h6__crs2H Typography_lineClamp-2__4Ampt Typography_lineClamp__92oq_">
+                ${title["rus_name"]}
+              </h4>
+            </div>
+          </div>
+        </a>
+      </div>
+    `
+    );
+  }
 </script>
 {% endblock %}
