--- a/remanga_fastapi/templates/signin.html
+++ b/remanga_fastapi/templates/signin.html
@@ -123,7 +123,7 @@
       <div class="jsx-b2be4f715220f048">
         <div class="jsx-261496919888b024 root fullWidth Input_formControl__B11lU">
           <div class="Input_root___0KQ3 Input_outlined__GjuSL"><input aria-invalid="false" name="username"
-              placeholder="*Логин/почта" rows="1" type="text" class="Input_input___YBKm" value="" autofocus=""
+              placeholder="Логин" rows="1" type="text" class="Input_input___YBKm" value="" autofocus=""
               autocapitalize="none" autocomplete="username" maxlength="150" required="" id="id_username"></div>
           <p class="Input_formHelperText__EwCsr"></p>
         </div>
@@ -134,21 +134,32 @@
           <p class="Input_formHelperText__EwCsr"></p>
         </div>
     </div>
+    <p class="success" style="color: green"></p>
     <p class="exceptions"></p>
     <button
       class="Button_button___CisL Button_button___CisL Button_contained__8_KFk Button_contained-primary__IViyX Button_contained-size-large__HCqRj Button_fullWidth__Dgoqh"
       tabindex="0" type="submit"><span class="Button_label__jamx3">Войти</span></button>
-  </div>
+  </div>  
     <p
       class="Typography_body2__piveF Typography_color-primary__xoN6_ Typography_bold__SKyBL Typography_align-center__j_M0w">
       <a href="{{ url_for('remanga:signup') }}" class="jsx-4c4906b68fb5f50a"
         style="color: var(--primary-light);">Зарегистрироваться</a>
     </p>
+    <p
+      class="Typography_body2__piveF Typography_color-primary__xoN6_ Typography_bold__SKyBL Typography_align-center__j_M0w">
+      <a class="jsx-4c4906b68fb5f50a Reset_password"
+        style="color: var(--primary-light); cursor: pointer;">Восстановить пароль</a>
+    </p>
   </div>
   </div>
   <script src="{{ url_for('static', path='signin/js/signin_post.js') }}"></script> 
+  <script src="{{ url_for('static', path='signin/js/reset_password.js') }}"></script> 
   <script src="{{ url_for('static', path='title/js/fetch_requests/fetch_request.js') }}"></script> 
   <script>
-    listen_signin_button('{{ csrf_token }}')
+    const csrf_token = "{{ csrf_token }}";
+    const exceptions_element = document.querySelector(".exceptions");
+    const success_element = document.querySelector(".success");
+
+    listen_signin_button();
   </script>
 {% endblock %}
