--- a/remanga_fastapi/templates/reset_password.html
+++ b/remanga_fastapi/templates/reset_password.html
@@ -71,7 +71,7 @@
             new_password2: password2.value
         })
                 
-        fetch_request('/api/reset_password', fetch_data, csrf_token, update_data_callback)
+        fetch_request('/api/reset_password', fetch_data, update_data_callback, 'PUT')
     });
     
   </script>
