--- a/remanga_fastapi/templates/signin.html
+++ b/remanga_fastapi/templates/signin.html
@@ -161,5 +161,6 @@
     const success_element = document.querySelector(".success");
 
     listen_signin_button();
+    listen_reset_password_link();
   </script>
 {% endblock %}
