--- a/remanga_fastapi/templates/signup.html
+++ b/remanga_fastapi/templates/signup.html
@@ -71,6 +71,8 @@
 <script src="{{ url_for('static', path='signup/signup_post.js') }}"></script>
 <script src="{{ url_for('static', path='title/js/fetch_requests/fetch_request.js') }}"></script>
 <script>
-  listen_signup_button('{{ csrf_token }}')
+  const csrf_token = "{{ csrf_token }}";
+
+  listen_signup_button();
 </script>
 {% endblock %}
