--- a/remanga_fastapi/templates/title.html
+++ b/remanga_fastapi/templates/title.html
@@ -122,33 +122,6 @@
     min-width: 0;
   }
 </style>
-<style id="__jsx-2767723650">
-  .grid-item.jsx-2767723650 {
-    flex-grow: 0;
-    max-width: 20%;
-    flex-basis: 20%;
-  }
-
-  @media screen and (min-width: 600px) {
-    .grid-item.jsx-2767723650 {
-      flex-grow: 0;
-      max-width: none;
-      flex-basis: auto;
-    }
-  }
-
-  @media screen and (min-width: 800px) {
-    .grid-item.jsx-2767723650 {}
-  }
-
-  @media screen and (min-width: 1024px) {
-    .grid-item.jsx-2767723650 {}
-  }
-
-  @media screen and (min-width: 1440px) {
-    .grid-item.jsx-2767723650 {}
-  }
-</style>
 <style id="__jsx-b8d4b7781168762e">
   .stat.jsx-b8d4b7781168762e {
     display: -webkit-inline-box;
@@ -360,8 +333,7 @@
   }
 
   .leftRow.jsx-26265f9d7209f510 {
-    width: 325px;
-    height: 450px;
+    width: 300px;
   }
 
   .right.jsx-26265f9d7209f510 {
@@ -819,8 +791,10 @@
       opacity: 0;
       border-radius: 4px;
   }  
+
 .Svg_rating {
-  width: 25px;padding-bottom: 3px;
+  width: 18px;
+  padding-bottom: 3px;
 }
 </style>
 {% endblock %}
@@ -829,18 +803,7 @@
 <div id="__next">
   <main class="jsx-b26231077db42c90 jsx-2515649928">
     <div itemscope="" itemtype="https://schema.org/CreativeWorkSeries" class="flex w-full justify-center">
-      <!--$--><!--$-->
       <div class="jsx-26265f9d7209f510 root">
-        <div style="top: 0px; display: none; width: 359px" class="jsx-5036979311864256 root">
-          <div class="jsx-5036979311864256 content withHover">
-            <p class="Typography_body1__TZSwE Typography_color-textSecondary__gCJWS">
-              <svg class="SvgIcon_root__keb_Y SvgIcon_fontSize-large__Xgixi" focusable="false" viewBox="0 0 24 24"
-                aria-hidden="true" style="transform: rotate(180deg)">
-                <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"></path>
-              </svg>Наверх
-            </p>
-          </div>
-        </div>
         <div class="jsx-5da9c2067ceba581 jsx-289239491 grid-container">
           <div class="jsx-26265f9d7209f510 leftRow">
             <div style="position: sticky; top: 80px">
@@ -943,12 +906,12 @@
                   </div>
                   <div class="jsx-c62bbc403caec98b tags">
                     {% for genre in title.genres %}
-                    <a class="Chip_chip__cpsxK Chip_gray__uE26d" title="Манга жанра {{ genre }}" href=""><span
-                        itemprop="genre" data-previewurl="">{{ genre.name }}</span></a>
+                    <p class="Chip_chip__cpsxK Chip_gray__uE26d" title="Манга жанра {{ genre }}"><span
+                        itemprop="genre" data-previewurl="">{{ genre.name }}</span></p>
                     {% endfor %} 
                     {% for category in title.categories %}
-                    <a class="Chip_chip__cpsxK Chip_gray__uE26d" title="Манга жанра {{ category }}" href=""><span
-                        itemprop="genre" data-previewurl="">{{ category.name }}</span></a>
+                    <p class="Chip_chip__cpsxK Chip_gray__uE26d" title="Манга жанра {{ category }}"><span
+                        itemprop="genre" data-previewurl="">{{ category.name }}</span></p>
                     {% endfor %}
                   </div>
                   <div class="jsx-7721551bb9cc7c76 container">
@@ -1018,17 +981,18 @@
                               <form class="comment_like_form">
                                   <button class="Comments_iconButton__dwH2e Button_comment_rating" type="button" value="like_{{ comment.id }}" style="background-color: transparent;border: none;padding: 0;">                                                                
                                       {% if user_title_comments_ratings[comment.id] %}
-                                        <svg fill="currentColor" viewBox="0 0 40 40"
-                                          class="jsx-83d2bca1a5644a9 jsx-2719031823 SvgIcon_fontSize-small__i__5t SvgIcon_color-primary__TnNB7 Svg_rating">
-                                          <path
-                                            d="M31 26.4q0 .3-.2.5l-1.1 1.2q-.3.2-.6.2t-.5-.2l-8.7-8.8-8.8 8.8q-.2.2-.5.2t-.5-.2l-1.2-1.2q-.2-.2-.2-.5t.2-.5l10.4-10.4q.3-.2.6-.2t.5.2l10.4 10.4q.2.2.2.5z"
-                                            class="jsx-83d2bca1a5644a9 jsx-2719031823"></path>
-                                        </svg>
-                                      {% else %}
-                                      <svg fill="currentColor" viewBox="0 0 40 40" class="jsx-83d2bca1a5644a9 jsx-2719031823 SvgIcon_fontSize-small__i__5t Svg_rating">
+                                      <svg fill="currentColor" viewBox="0 0 469.333 469.333"
+                                        class="jsx-83d2bca1a5644a9 jsx-2719031823 SvgIcon_fontSize-small__i__5t Svg_rating SvgIcon_color-primary__TnNB7">
+                                        <rect x="0" y="192" width="85.333" height="256" />
                                         <path
-                                          d="M31 26.4q0 .3-.2.5l-1.1 1.2q-.3.2-.6.2t-.5-.2l-8.7-8.8-8.8 8.8q-.2.2-.5.2t-.5-.2l-1.2-1.2q-.2-.2-.2-.5t.2-.5l10.4-10.4q.3-.2.6-.2t.5.2l10.4 10.4q.2.2.2.5z"
-                                          class="jsx-83d2bca1a5644a9 jsx-2719031823"></path>
+                                          d="M469.333,213.333c0-23.573-19.093-42.667-42.667-42.667h-134.72l20.373-97.493c0.427-2.133,0.747-4.373,0.747-6.72 c0-8.853-3.627-16.853-9.387-22.613l-22.72-22.507l-140.48,140.48C132.8,169.6,128,180.267,128,192v213.333 C128,428.907,147.093,448,170.667,448h192c17.707,0,32.853-10.773,39.253-26.027l64.32-150.4 c1.92-4.907,3.093-10.133,3.093-15.573v-40.853l-0.213-0.213L469.333,213.333z" />
+                                      </svg>
+                                      {% else %}
+                                      <svg fill="currentColor" viewBox="0 0 469.333 469.333"
+                                        class="jsx-83d2bca1a5644a9 jsx-2719031823 SvgIcon_fontSize-small__i__5t Svg_rating">
+                                        <rect x="0" y="192" width="85.333" height="256" />
+                                        <path
+                                          d="M469.333,213.333c0-23.573-19.093-42.667-42.667-42.667h-134.72l20.373-97.493c0.427-2.133,0.747-4.373,0.747-6.72 c0-8.853-3.627-16.853-9.387-22.613l-22.72-22.507l-140.48,140.48C132.8,169.6,128,180.267,128,192v213.333 C128,428.907,147.093,448,170.667,448h192c17.707,0,32.853-10.773,39.253-26.027l64.32-150.4 c1.92-4.907,3.093-10.133,3.093-15.573v-40.853l-0.213-0.213L469.333,213.333z" />
                                       </svg>
                                       {% endif %}
                                   </button>
@@ -1036,19 +1000,20 @@
                                 <button class="Comments_iconButton__dwH2e Button_comment_rating" type="button" value="dislike_{{ comment.id }}"
                                 style="background-color: transparent;border: none;padding: 0;">
                                 {% if comment.id in user_title_comments_ratings and not user_title_comments_ratings[comment.id] %}
-                                  <svg fill="currentColor" viewBox="0 0 40 40"
-                                    class="jsx-83d2bca1a5644a9 jsx-2719031823 SvgIcon_fontSize-small__i__5t SvgIcon_color-secondary__OvK95 Svg_rating"
+                                  <svg fill="currentColor" viewBox="0 0 469.333 469.333"
+                                    class="jsx-83d2bca1a5644a9 jsx-2719031823 SvgIcon_fontSize-small__i__5t Svg_rating SvgIcon_color-secondary__OvK95"
                                     style="transform: rotate(180deg);">
+                                    <rect x="0" y="192" width="85.333" height="256" />
                                     <path
-                                      d="M31 26.4q0 .3-.2.5l-1.1 1.2q-.3.2-.6.2t-.5-.2l-8.7-8.8-8.8 8.8q-.2.2-.5.2t-.5-.2l-1.2-1.2q-.2-.2-.2-.5t.2-.5l10.4-10.4q.3-.2.6-.2t.5.2l10.4 10.4q.2.2.2.5z"
-                                      class="jsx-83d2bca1a5644a9 jsx-2719031823"></path>
+                                      d="M469.333,213.333c0-23.573-19.093-42.667-42.667-42.667h-134.72l20.373-97.493c0.427-2.133,0.747-4.373,0.747-6.72 c0-8.853-3.627-16.853-9.387-22.613l-22.72-22.507l-140.48,140.48C132.8,169.6,128,180.267,128,192v213.333 C128,428.907,147.093,448,170.667,448h192c17.707,0,32.853-10.773,39.253-26.027l64.32-150.4 c1.92-4.907,3.093-10.133,3.093-15.573v-40.853l-0.213-0.213L469.333,213.333z" />
                                   </svg>
                                 {% else %}                                    
-                                  <svg fill="currentColor" viewBox="0 0 40 40" class="jsx-83d2bca1a5644a9 jsx-2719031823 SvgIcon_fontSize-small__i__5t Svg_rating"
+                                  <svg fill="currentColor" viewBox="0 0 469.333 469.333"
+                                    class="jsx-83d2bca1a5644a9 jsx-2719031823 SvgIcon_fontSize-small__i__5t Svg_rating"
                                     style="transform: rotate(180deg);">
+                                    <rect x="0" y="192" width="85.333" height="256" />
                                     <path
-                                      d="M31 26.4q0 .3-.2.5l-1.1 1.2q-.3.2-.6.2t-.5-.2l-8.7-8.8-8.8 8.8q-.2.2-.5.2t-.5-.2l-1.2-1.2q-.2-.2-.2-.5t.2-.5l10.4-10.4q.3-.2.6-.2t.5.2l10.4 10.4q.2.2.2.5z"
-                                      class="jsx-83d2bca1a5644a9 jsx-2719031823"></path>
+                                      d="M469.333,213.333c0-23.573-19.093-42.667-42.667-42.667h-134.72l20.373-97.493c0.427-2.133,0.747-4.373,0.747-6.72 c0-8.853-3.627-16.853-9.387-22.613l-22.72-22.507l-140.48,140.48C132.8,169.6,128,180.267,128,192v213.333 C128,428.907,147.093,448,170.667,448h192c17.707,0,32.853-10.773,39.253-26.027l64.32-150.4 c1.92-4.907,3.093-10.133,3.093-15.573v-40.853l-0.213-0.213L469.333,213.333z" />
                                   </svg>
                                 {% endif %}
                                 </button>
@@ -1066,52 +1031,10 @@
           </div>
         </div>
       </div>
-      <!--/$--><!--/$-->
     </div>
   </main>
 </div>
 </div>
-<script id="__NEXT_DATA__" type="application/json">
-    </script>
-<script>
-  (function (m, e, t, r, i, k, a) {
-    m[i] =
-      m[i] ||
-      function () {
-        (m[i].a = m[i].a || []).push(arguments);
-      };
-    m[i].l = 1 * new Date();
-    (k = e.createElement(t)),
-      (a = e.getElementsByTagName(t)[0]),
-      (k.async = 1),
-      (k.src = r),
-      a.parentNode.insertBefore(k, a);
-  })(
-    window,
-    document,
-    "script",
-    "https://mc.yandex.ru/metrika/tag.js",
-    "ym"
-  );
-  ym(43900324, "init", {
-    clickmap: true,
-    trackLinks: true,
-    accurateTrackBounce: true,
-    webvisor: true,
-  });
-</script>
-<noscript>
-  <div>
-    <img src="https://mc.yandex.ru/watch/43900324" style="position: absolute; left: -9999px" alt="" />
-  </div>
-</noscript>
-<script>
-  <!-- -->
-</script>
-<script>
-  window.yaContextCb = window.yaContextCb || [];
-</script>
-
 <next-route-announcer>
   <p aria-live="assertive" id="__next-route-announcer__" role="alert" style="
           border: 0px;
